# Extractio-Dwg-to-Geojson-Gdb-converter

./: .gitignore  LICENSE  README.md  diagnose.py  extractio.py  extractio_getting_started.md  launcher.bat  launcher.py  mock_test.py  pyproject.toml  verify.py  yaml_generator.py
samples/: sample_config.yaml  sample_dwg_paths.yaml
