[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extractio"
version = "0.1.1"
description = "AutoCAD DWG to GeoJSON/GDB extraction engine driven by YAML config"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Prathamesh Athavale", email = "pgathavale@gmail.com" }]
requires-python = ">=3.9"
keywords = ["autocad", "dwg", "geojson", "gis", "gdb", "cad", "extraction", "geodata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pywin32",
    "pyyaml",
]

[project.optional-dependencies]
shapely  = ["shapely"]
llm      = ["groq", "google-generativeai", "pdfplumber", "python-docx"]
gdb      = ["fiona"]
locking  = ["filelock"]
verify   = ["pandas"]
all      = ["shapely", "groq", "google-generativeai", "pdfplumber", "python-docx",
             "fiona", "filelock", "pandas"]

[project.scripts]
extractio = "extractio:main"

[project.urls]
Homepage   = "https://github.com/Prath2000/Extractio-Dwg-to-Geojson-Gdb-converter"
Repository = "https://github.com/Prath2000/Extractio-Dwg-to-Geojson-Gdb-converter"
Issues     = "https://github.com/Prath2000/Extractio-Dwg-to-Geojson-Gdb-converter/issues"

[tool.setuptools]
py-modules = ["extractio", "verify", "diagnose", "launcher", "yaml_generator", "mock_test"]

[tool.setuptools.package-data]
"*" = ["samples/*.yaml"]

[tool.setuptools.data-files]
"extractio-samples" = ["samples/sample_config.yaml", "samples/sample_dwg_paths.yaml"]
